--- a/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
+++ b/ansible/playbooks/roles/install-cloudflared/tasks/main.yml
@@ -47,7 +47,7 @@
 
 - name: Install Docker
   ignore_errors: true
-  ansible.builtin.shell: sudo apt update && sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+  ansible.builtin.shell: sudo apt update && sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
   register: install_docker
 - debug: msg="{{ install_docker.stdout_lines }}"
 
